--- a/packages/fluent/scss/grid/index.scss
+++ b/packages/fluent/scss/grid/index.scss
@@ -21,6 +21,7 @@ $_kendo-module-meta: (
         "menu",
         "dialog",
         "pager",
+        "chip",
         "skeleton",
         "draggable"
     )
