--- a/packages/material/scss/grid/_layout.scss
+++ b/packages/material/scss/grid/_layout.scss
@@ -9,8 +9,8 @@ $grid-header-menu-icon-spacing: 14px !default;
 $grid-group-indicator-border-radius: calc( #{$font-size} + #{$kendo-button-padding-y} ) !default;
 $grid-group-indicator-gap: 8px !default;
 
-$grid-group-dropclue-height: calc( #{$font-size * 2} + #{$padding-y * 2} ) !default;
-$grid-group-dropclue-top: calc( ( #{$kendo-button-calc-size} + #{$grid-grouping-header-padding-y * 2} - #{$grid-group-dropclue-height} ) / 2) !default;
+$grid-group-dropclue-height: $kendo-chip-calc-size !default;
+$grid-group-dropclue-top: calc( ( #{$kendo-chip-calc-size} + #{$grid-grouping-header-padding-y * 2} - #{$grid-group-dropclue-height} ) / 2) !default;
 
 @import "~@progress/kendo-theme-default/scss/grid/_layout.scss";
 
@@ -76,14 +76,6 @@ $grid-group-dropclue-top: calc( ( #{$kendo-button-calc-size} + #{$grid-grouping-
         .k-grid-header-menu,
         .k-hierarchy-cell .k-icon {
             line-height: normal;
-        }
-    }
-
-    .k-grouping-header {
-
-        .k-group-indicator {
-            border-width: 0;
-            line-height: $kendo-button-line-height;
         }
     }
 
