--- a/packages/nouvelle/scss/list/_variables.scss
+++ b/packages/nouvelle/scss/list/_variables.scss
@@ -1,6 +1,6 @@
 // List
 $kendo-list-font-family: $kendo-font-family !default;
-$kendo-list-font-weight: normal !default;
+$kendo-list-font-weight: null !default;
 
 $kendo-list-header-border-width: 1px !default;
 $kendo-list-header-font-weight: var( --kendo-font-weight-bold, bold ) !default;
