--- a/packages/nouvelle/scss/popup/_layout.scss
+++ b/packages/nouvelle/scss/popup/_layout.scss
@@ -3,27 +3,18 @@
     // Popup
     .k-popup {
         margin: 0;
-        padding: 0;
-        border-width: var(--kendo-popup-border-width);
-        border-style: var(--kendo-popup-border-style);
-        box-sizing: border-box;
-        font-size: var(--kendo-popup-font-size);
-        font-family: var(--kendo-popup-font-family);
-        line-height: var(--kendo-popup-line-height);
-    }
-
-
-    // Popup widgets
-    .k-popup > .k-widget {
-        border-width: 0;
-    }
-
-
-    // Popup list
-    .k-popup .k-list {
-        border-width: 0;
+        padding-inline: var( --kendo-popup-padding-x, #{k-if-var( $kendo-popup-padding-x, 0 )} );
+        padding-block: var( --kendo-popup-padding-y, #{k-if-var( $kendo-popup-padding-y, 0 )} );
+        border-width: var( --kendo-popup-border-width, #{k-if-var( $kendo-popup-border-width, 1px )} );
+        border-style: var( --kendo-popup-border-style, #{k-if-var( $kendo-popup-border-style, solid )} );
+        border-radius: var( --kendo-popup-border-radius, #{k-if-var( $kendo-popup-border-radius, 0 )} );
+        outline: 0;
+        color: inherit;
         background: none;
-        font: inherit;
+        font-family: var( --kendo-popup-font-family, #{k-if-var( $kendo-popup-font-family, inherit )} );
+        font-size: var( --kendo-popup-font-size, #{k-if-var( $kendo-popup-font-size, 1rem )} );
+        line-height: var( --kendo-popup-line-height, #{k-if-var( $kendo-popup-line-height, normal )} );
+        flex-shrink: 0;
     }
 
 
@@ -35,13 +26,32 @@
 
 
     // No data
-    .k-nodata {
+    .k-no-data {
         min-height: 10em;
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
         justify-content: center;
     }
+
+
+    // Alias
+    .k-nodata {
+        @extend .k-no-data;
+    }
+
+
+    // Child components
+    .k-popup > .k-widget {
+        border-width: 0;
+    }
+    .k-popup .k-list {
+        height: 100%;
+        border-width: 0;
+        background: none;
+        font: inherit;
+    }
+
 }
 
 
