--- a/packages/nouvelle/scss/popup/_variables.scss
+++ b/packages/nouvelle/scss/popup/_variables.scss
@@ -1,45 +1,24 @@
-$popup-padding-x: 0px !default;
-$popup-padding-y: 0px !default;
+$kendo-popup-padding-x: null !default;
+$kendo-popup-padding-y: null !default;
 
-$popup-border-width: 1px !default;
-$popup-border-style: solid !default;
+$kendo-popup-border-width: 1px !default;
+$kendo-popup-border-style: solid !default;
 
-$popup-border-radius: 0px !default;
+$kendo-popup-border-radius: k-map-get( $kendo-spacing, 1 ) !default;
 
-$popup-font-family: $kendo-font-family !default;
-$popup-font-size: $kendo-font-size-md !default;
-$popup-line-height: $kendo-line-height-md !default;
+$kendo-popup-font-family: null !default;
+$kendo-popup-font-size: null !default;
+$kendo-popup-line-height: null !default;
 
 
 /// The background of the popup.
 /// @group popup
-$popup-bg: k-color-mix( black, $kendo-component-bg, 2% ) !default;
+$kendo-popup-bg: $kendo-component-bg !default;
 /// The text color of the popup.
 /// @group popup
-$popup-text: $kendo-component-text !default;
+$kendo-popup-text: $kendo-component-text !default;
 /// The border color of the popup.
 /// @group popup
-$popup-border: $kendo-component-border !default;
-$popup-shadow: 0 2px 4px 0 rgba( black, .03 ), 0 4px 5px 0 rgba( black, .04 ) !default;
-
-
-
-
-// Expose
-:root {
-    --kendo-popup-padding-x: #{$popup-padding-x};
-    --kendo-popup-padding-y: #{$popup-padding-y};
-    --kendo-popup-border-width: #{$popup-border-width};
-    --kendo-popup-border-style: #{$popup-border-style};
-
-    --kendo-popup-border-radius: #{$popup-border-radius};
-
-    --kendo-popup-font-family: #{$popup-font-family};
-    --kendo-popup-font-size: #{$popup-font-size};
-    --kendo-popup-line-height: #{$popup-line-height};
-
-    --kendo-popup-bg: #{$popup-bg};
-    --kendo-popup-text: #{$popup-text};
-    --kendo-popup-border: #{$popup-border};
-    --kendo-popup-shadow: #{$popup-shadow};
-}
+$kendo-popup-border: $kendo-component-border !default;
+$kendo-popup-shadow: 0 2px 4px 0 rgba( black, .03 ), 0 4px 5px 0 rgba( black, .04 ) !default;
+$kendo-popup-outline: null !default;
