fix(timedurationpicker): fix icons dependency

--- a/packages/bootstrap/scss/timedurationpicker/_index.scss
+++ b/packages/bootstrap/scss/timedurationpicker/_index.scss
@@ -2,7 +2,7 @@
 
 
 // Dependencies
-@import "../icons/index";
+@import "../icons/_index.scss";
 @import "../button/_index.scss";
 @import "../input/_index.scss";
 @import "../popup/_index.scss";
