--- a/packages/bootstrap/scss/timeselector/_index.scss
+++ b/packages/bootstrap/scss/timeselector/_index.scss
@@ -5,7 +5,7 @@
 @import "../list/_index.scss";
 @import "../action-buttons/_index.scss";
 @import "../button/_index.scss";
-@import "../icons/index";
+@import "../icons/_index.scss";
 
 
 // Component
