--- a/packages/material/scss/calendar/_layout.scss
+++ b/packages/material/scss/calendar/_layout.scss
@@ -6,9 +6,7 @@
 
         .k-title,
         .k-calendar-title,
-        .k-nav-fast,
-        .k-nav-today,
-        .k-calendar-nav-today {
+        .k-nav-fast {
             font-weight: 500;
             text-transform: none;
         }
