--- a/packages/default/scss/window/_theme.scss
+++ b/packages/default/scss/window/_theme.scss
@@ -28,4 +28,12 @@
         );
     }
 
+    // Window theme colors
+    @each $name, $color in $kendo-window-theme-colors {
+        .k-window-#{$name} .k-window-titlebar {
+            color: contrast-wcag( $color );
+            background-color: $color;
+        }
+    }
+
 }
