--- a/packages/material/scss/window/_variables.scss
+++ b/packages/material/scss/window/_variables.scss
@@ -42,3 +42,12 @@ $kendo-window-sizes: (
     md: 800px,
     lg: 1200px
 ) !default;
+
+/// Theme colors map for the window.
+/// @group window
+$kendo-window-theme-colors: (
+    "primary": map-get($kendo-theme-colors, "primary"),
+    "light": map-get($kendo-theme-colors, "light"),
+    "dark": map-get($kendo-theme-colors, "dark")
+) !default;
+
