--- a/packages/bootstrap/scss/dialog/_theme.scss
+++ b/packages/bootstrap/scss/dialog/_theme.scss
@@ -16,4 +16,12 @@
         border-color: $kendo-window-titlebar-border;
     }
 
+    // Dialog theme colors
+    @each $name, $color in $kendo-dialog-theme-colors {
+        .k-dialog-#{$name} .k-dialog-titlebar {
+            color: contrast-wcag( $color );
+            background-color: $color;
+        }
+    }
+
 }
