--- a/packages/classic/scss/dialog/_variables.scss
+++ b/packages/classic/scss/dialog/_variables.scss
@@ -8,3 +8,11 @@ $kendo-dialog-buttongroup-padding-y: $actions-padding-y !default;
 $kendo-dialog-buttongroup-border-width: 1px !default;
 
 $kendo-dialog-button-spacing: $actions-button-spacing !default;
+
+/// Theme colors map for the dialog.
+/// @group dialog
+$kendo-dialog-theme-colors: (
+    "primary": map-get($kendo-theme-colors, "primary"),
+    "light": map-get($kendo-theme-colors, "light"),
+    "dark": map-get($kendo-theme-colors, "dark")
+) !default;
