--- a/packages/default/scss/dialog/_theme.scss
+++ b/packages/default/scss/dialog/_theme.scss
@@ -8,4 +8,12 @@
         );
     }
 
+    // Dialog theme colors
+    @each $name, $color in $kendo-dialog-theme-colors {
+        .k-dialog-#{$name} .k-dialog-titlebar {
+            color: contrast-wcag( $color );
+            background-color: $color;
+        }
+    }
+
 }
