--- a/packages/default/scss/dialog/_variables.scss
+++ b/packages/default/scss/dialog/_variables.scss
@@ -1,6 +1,6 @@
 // Dialog
-$kendo-dialog-titlebar-bg: $primary !default;
-$kendo-dialog-titlebar-text: $primary-contrast !default;
+$kendo-dialog-titlebar-bg: $header-bg !default;
+$kendo-dialog-titlebar-text: $header-text !default;
 $kendo-dialog-titlebar-border: inherit !default;
 
 $kendo-dialog-buttongroup-padding-x: $actions-padding-x !default;
@@ -8,3 +8,11 @@ $kendo-dialog-buttongroup-padding-y: $actions-padding-y !default;
 $kendo-dialog-buttongroup-border-width: 1px !default;
 
 $kendo-dialog-button-spacing: $actions-button-spacing !default;
+
+/// Theme colors map for the dialog.
+/// @group dialog
+$kendo-dialog-theme-colors: (
+    "primary": map-get($kendo-theme-colors, "primary"),
+    "light": map-get($kendo-theme-colors, "light"),
+    "dark": map-get($kendo-theme-colors, "dark")
+) !default;
