--- a/packages/fluent/scss/dialog/_theme.scss
+++ b/packages/fluent/scss/dialog/_theme.scss
@@ -8,14 +8,33 @@
     }
 
     // Title
-    .k-dialog-title {
+    .k-dialog-titlebar {
         @include fill(
-            var( --kendo-dialog-titlebar-text, #{$kendo-dialog-titlebar-text} ),
-            var( --kendo-dialog-titlebar-bg, #{$kendo-dialog-titlebar-bg} ),
-            var( --kendo-dialog-titlebar-border, #{$kendo-dialog-titlebar-border} ),
+            $bg: var( --kendo-dialog-titlebar-bg, #{$kendo-dialog-titlebar-bg} ),
+            $border: var( --kendo-dialog-titlebar-border, #{$kendo-dialog-titlebar-border} ),
         );
 
         @include box-shadow(none);
+    }
+
+    .k-dialog-title {
+        color: var( --kendo-dialog-titlebar-text, #{$kendo-dialog-titlebar-text} );
+    }
+
+    // dialog theme colors
+    @each $theme-color, $color-props in $kendo-dialog-theme-colors {
+
+        $_text: map-get( $color-props, text );
+        $_bg: map-get( $color-props, bg );
+        $_border: map-get( $color-props, border );
+
+        .k-dialog-#{$theme-color} .k-dialog-titlebar {
+            color: var( --kendo-dialog-titlebar-text, #{$kendo-dialog-titlebar-text} );
+
+            --kendo-dialog-titlebar-text: var( --kendo-dialog-#{$theme-color}-text, #{$_text} );
+            --kendo-dialog-titlebar-bg: var( --kendo-dialog-#{$theme-color}-bg, #{$_bg} );
+            --kendo-dialog-titlebar-border: var( --kendo-dialog-#{$theme-color}-border, #{$_border} );
+        }
     }
 
 }
