--- a/packages/fluent/scss/dialog/_variables.scss
+++ b/packages/fluent/scss/dialog/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use "../core/color-system" as *;
 @use "../core/_variables.scss" as *;
 
@@ -51,3 +52,48 @@ $kendo-dialog-button-spacing: map-get( $kendo-spacing, 2 ) !default; // $actions
 /// Box shadow around the dialog.
 /// @group dialog
 $kendo-dialog-shadow: var( --kendo-box-shadow-depth-4, none ) !default;
+
+/// Theme variations for the dialog.
+$kendo-dialog-brand-colors: (
+    primary: primary
+ );
+
+// Matrix with dialog theme colors in the order: bg, color, border
+$_tc-dialog-matrix: (
+    (normal: (100, $white, 100)),
+);
+
+$_tc-dialog-dark-matrix: (
+    (normal: (160, $white, 160)),
+);
+
+$_tc-dialog-light-matrix: (
+    (normal: (50, 160, 50)),
+);
+
+/// Theme colors map for the dialog variations.
+$kendo-dialog-theme-colors: ();
+
+@each $ui-states in $_tc-dialog-matrix {
+    @each $brand-color, $palette in $kendo-dialog-brand-colors {
+        $kendo-dialog-theme-colors: map.deep-merge(
+            $kendo-dialog-theme-colors,
+            generate-theme-variation( $brand-color, $palette, $ui-states )
+        );
+    };
+}
+
+@each $ui-states in $_tc-dialog-dark-matrix {
+    $kendo-dialog-theme-colors: map.deep-merge(
+        $kendo-dialog-theme-colors,
+        generate-theme-variation( dark, neutral, $ui-states )
+    );
+}
+
+@each $ui-states in $_tc-dialog-light-matrix {
+    $kendo-dialog-theme-colors: map.deep-merge(
+        $kendo-dialog-theme-colors,
+        generate-theme-variation( light, neutral, $ui-states )
+    );
+}
+
