chore: remove obsolete styles and selectors

--- a/packages/material/scss/calendar/_layout.scss
+++ b/packages/material/scss/calendar/_layout.scss
@@ -5,8 +5,7 @@
     .k-calendar {
 
         .k-title,
-        .k-calendar-title,
-        .k-nav-fast {
+        .k-calendar-title {
             font-weight: 500;
             text-transform: none;
         }
