--- a/packages/bootstrap/scss/drawer/_variables.scss
+++ b/packages/bootstrap/scss/drawer/_variables.scss
@@ -1,39 +1,39 @@
 // Drawer
-$drawer-bg: $component-bg !default;
-$drawer-text: $component-text !default;
-$drawer-border: $component-border !default;
-$drawer-border-width: 1px !default;
-$drawer-font-family: $font-family !default;
-$drawer-font-size: $font-size !default;
-$drawer-line-height: $line-height !default;
-$drawer-content-padding-x: $padding-x !default;
-$drawer-content-padding-y: $padding-y !default;
+$kendo-drawer-bg: $component-bg !default;
+$kendo-drawer-text: $component-text !default;
+$kendo-drawer-border: $component-border !default;
+$kendo-drawer-border-width: 1px !default;
+$kendo-drawer-font-family: $font-family !default;
+$kendo-drawer-font-size: $font-size !default;
+$kendo-drawer-line-height: $line-height !default;
+$kendo-drawer-content-padding-x: $padding-x !default;
+$kendo-drawer-content-padding-y: $padding-y !default;
 
-$drawer-scrollbar-width: 7px !default;
-$drawer-scrollbar-color: rgba( 156, 156, 156, .7 ) !default;
-$drawer-scrollbar-bg: #dedede !default;
-$drawer-scrollbar-radius: 20px !default;
-$drawer-scrollbar-hovered-color: rgba( 156, 156, 156, 1 ) !default;
+$kendo-drawer-scrollbar-width: 7px !default;
+$kendo-drawer-scrollbar-color: rgba( 156, 156, 156, .7 ) !default;
+$kendo-drawer-scrollbar-bg: #dedede !default;
+$kendo-drawer-scrollbar-radius: 20px !default;
+$kendo-drawer-scrollbar-hovered-color: rgba( 156, 156, 156, 1 ) !default;
 
-$drawer-item-padding-x: $padding-x !default;
-$drawer-item-padding-y: $padding-y !default;
-$drawer-item-font-size: 16px !default;
-$drawer-item-line-height: $line-height-lg !default;
+$kendo-drawer-item-padding-x: $padding-x !default;
+$kendo-drawer-item-padding-y: $padding-y !default;
+$kendo-drawer-item-font-size: 16px !default;
+$kendo-drawer-item-line-height: $line-height-lg !default;
 
-$drawer-item-level-padding-x: $drawer-item-padding-x !default;
-$drawer-item-level-count: 5 !default;
+$kendo-drawer-item-level-padding-x: $kendo-drawer-item-padding-x !default;
+$kendo-drawer-item-level-count: 5 !default;
 
-$drawer-icon-size: $icon-size !default;
+$kendo-drawer-icon-size: $icon-size !default;
 
-$drawer-mini-initial-width: calc( 2 * #{$drawer-item-padding-x} + #{$drawer-icon-size} ) !default;
+$kendo-drawer-mini-initial-width: calc( 2 * #{$kendo-drawer-item-padding-x} + #{$kendo-drawer-icon-size} ) !default;
 
-$drawer-hovered-bg: $hovered-bg !default;
-$drawer-hovered-text: $hovered-text !default;
+$kendo-drawer-hovered-bg: $hovered-bg !default;
+$kendo-drawer-hovered-text: $hovered-text !default;
 
-$drawer-focused-bg: $hovered-bg !default;
-$drawer-focused-shadow: inset 0 0 0 2px rgba( black, .15 ) !default;
+$kendo-drawer-focused-bg: $hovered-bg !default;
+$kendo-drawer-focused-shadow: inset 0 0 0 2px rgba( black, .15 ) !default;
 
-$drawer-selected-bg: $selected-bg !default;
-$drawer-selected-text: $selected-text !default;
-$drawer-selected-hover-bg: k-try-shade( $selected-bg, 1 ) !default;
-$drawer-selected-hover-text: $selected-text !default;
+$kendo-drawer-selected-bg: $selected-bg !default;
+$kendo-drawer-selected-text: $selected-text !default;
+$kendo-drawer-selected-hover-bg: k-try-shade( $selected-bg, 1 ) !default;
+$kendo-drawer-selected-hover-text: $selected-text !default;
