chore: update sass config loadPath to node_modules

--- a/packages/material/scss/core/color-system/index.import.scss
+++ b/packages/material/scss/core/color-system/index.import.scss
@@ -1,2 +1,2 @@
-@import "~@progress/kendo-theme-core/scss/color-system/index.import.scss";
+@import "@progress/kendo-theme-core/scss/color-system/index.import.scss";
 @import "_color-system-material.scss";
