--- a/packages/classic/scss/core/styles/index.import.scss
+++ b/packages/classic/scss/core/styles/index.import.scss
@@ -1,1 +1,1 @@
-@import "~@progress/kendo-theme-core/scss/styles/index.import.scss";
+@import "@progress/kendo-theme-core/scss/styles/index.import.scss";
