--- a/packages/default/scss/progressbar/_variables.scss
+++ b/packages/default/scss/progressbar/_variables.scss
@@ -12,10 +12,18 @@ $progressbar-text: $component-text !default;
 $progressbar-border: $component-border !default;
 $progressbar-gradient: null !default;
 
-$progressbar-fill-bg: $primary !default;
-$progressbar-fill-text: contrast-wcag( $progressbar-fill-bg ) !default;
-$progressbar-fill-border: try-shade( $progressbar-fill-bg ) !default;
-$progressbar-fill-gradient: null !default;
+/// Progress background color of the progressbar.
+/// @group progressbar
+$kendo-progressbar-value-bg: $primary !default;
+/// Progress text color of the progressbar.
+/// @group progressbar
+$kendo-progressbar-value-text: contrast-wcag( $kendo-progressbar-value-bg ) !default;
+/// Progress border color of the progressbar.
+/// @group progressbar
+$kendo-progressbar-value-border: try-shade( $kendo-progressbar-value-bg ) !default;
+/// Progress background gradient of the progressbar.
+/// @group progressbar
+$kendo-progressbar-value-gradient: null !default;
 
 $progressbar-indeterminate-bg: $progressbar-bg !default;
 $progressbar-indeterminate-text: $progressbar-text !default;
