--- a/packages/material/scss/progressbar/_theme.scss
+++ b/packages/material/scss/progressbar/_theme.scss
@@ -53,5 +53,10 @@
 
     .k-progressbar-indeterminate {
         background-image: none;
+
+        &::before,
+        &::after {
+            background: $kendo-progressbar-value-bg;
+        }
     }
 }
