--- a/packages/fluent/scss/progressbar/_layout.scss
+++ b/packages/fluent/scss/progressbar/_layout.scss
@@ -7,7 +7,7 @@
     // Base
     .k-progressbar {
         @include border-radius( var( --kendo-progressbar-border-radius, #{$kendo-progressbar-border-radius} ) );
-        --kendo-progressbar-progress: 0;
+        --kendo-progressbar-value: 0;
         border-width: var( --kendo-progressbar-border-width, #{$kendo-progressbar-border-width} );
         border-style: solid;
         box-sizing: border-box;
@@ -29,7 +29,7 @@
 
 
         // Selection
-        > .k-selected {
+        > .k-progressbar-value {
             border-width: 0;
             border-style: solid;
             display: flex;
@@ -96,13 +96,13 @@
             margin-block-start: var( --kendo-progressbar-offset-y, #{$kendo-progressbar-offset-y} );
         }
 
-        > .k-selected {
+        > .k-progressbar-value {
             width: 0;
-            width: calc( var( --kendo-progressbar-progress, 0 ) * 1% ); // sass-lint:disable-line no-duplicate-properties
+            width: calc( var( --kendo-progressbar-value, 0 ) * 1% ); // sass-lint:disable-line no-duplicate-properties
             flex-direction: row;
 
             > .k-progress-status-wrap {
-                width: calc( 100% * ( 100 / var( --kendo-progressbar-progress, 1 ) ) );
+                width: calc( 100% * ( 100 / var( --kendo-progressbar-value, 1 ) ) );
             }
         }
 
@@ -115,7 +115,7 @@
         // Horizontal reverse
         &.k-progressbar-reverse {
 
-            > .k-selected {
+            > .k-progressbar-value {
                 flex-direction: row-reverse;
                 justify-self: flex-end;
             }
@@ -146,14 +146,14 @@
             writing-mode: vertical-lr;
         }
 
-        > .k-selected {
-            height: calc( var( --kendo-progressbar-progress, 0 ) * 1% ); // sass-lint:disable-line no-duplicate-properties
+        > .k-progressbar-value {
+            height: calc( var( --kendo-progressbar-value, 0 ) * 1% ); // sass-lint:disable-line no-duplicate-properties
             flex-direction: column-reverse;
             align-self: flex-end;
             align-items: flex-end;
 
             > .k-progress-status-wrap {
-                height: calc( 100% * ( 100 / var( --kendo-progressbar-progress, 1 ) ) ); // sass-lint:disable-line no-duplicate-properties
+                height: calc( 100% * ( 100 / var( --kendo-progressbar-value, 1 ) ) ); // sass-lint:disable-line no-duplicate-properties
             }
 
             .k-progress-status {
@@ -174,7 +174,7 @@
                 flex-direction: column-reverse;
             }
 
-            > .k-selected {
+            > .k-progressbar-value {
                 flex-direction: column;
                 align-self: flex-start;
             }
@@ -212,7 +212,7 @@
 
         .k-reset,
         .k-progress-status-wrap,
-        .k-selected,
+        .k-progressbar-value,
         .k-progress-chunk {
             display: none;
         }
@@ -225,8 +225,8 @@
     // Blazor specific
     .telerik-blazor.k-progressbar-horizontal {
 
-        > .k-selected,
-        > .k-selected > .k-progress-status-wrap {
+        > .k-progressbar-value,
+        > .k-progressbar-value > .k-progress-status-wrap {
             transition: width .1s ease-in-out;
         }
     }
